#76: Fixed build errors.